2001-07-03  Dave Peticolas  <dave@krondo.com>

	* AUTHORS: credits

	* doc/sgml/C/xacc-about.sgml: credits

	* src/scm/date-utilities.scm: Nicholas Lee's bug fix

	* src/.cvsignore: adjust for new program

	* rpm/gnucash.spec.in: adjust for new program

	* src/Makefile.am: adjust for new program

	* src/gnucash-make-guids.c: new program to aid in GUID creation

	* src/engine/sql/putil.h: Alex Zepeda's patch converting atol->strtoll.

	* src/scm/commodity-utilities.scm: fix bug -- use srfi-1 to
	make sure we get the right 'last'

	* src/scm/Makefile.am: same as below

	* src/scm/report/Makefile.am: fix bugs -- put modulized scm
	files back into dist and strings targets

	* src/scm/report/taxtxf.scm: fix bug, eliminate use of append

	* src/MultiLedger.c: same as below

	* src/register/table-allgui.c: same as below

	* src/register/splitreg.c: same as below

	* src/register/splitreg.h: same as below

	* src/register/table-allgui.h: rename TableView to TableModel.
	Put cell data handlers into the model.

2001-07-02  Dave Peticolas  <dave@krondo.com>

	* many header files: apply Ben Stanley's script to
	convert __HEADER_H__ to HEADER_H. All names starting
	with '_' are reserved.

	* src/gnome/gnc-dateedit.c: sync with datecell-gnome.c

	* src/register/gnome/datecell-gnome.c: use GDate to do
	date manipulations.

	* src/scm/bootstrap.scm.in: instead of the scheme command,
	just tell the user to run gnucash once as root.

2001-07-01  Dave Peticolas  <dave@krondo.com>

	* src/gnc-ui-util.[ch]: implement towupper and iswlower
	if they are missing

	* src/register/quickfillcell.c: include gnc-ui-util.h

	* src/register/QuickFill.c: include gnc-ui-util.h

	* configure.in: check for towupper

2001-06-29  Joshua Sled  <jsled@asynchronous.org>

	* src/gnome/gnc-frequency.c: Added functions for dealing with
	widget changes in the year-subset freq. panels [quarterly,
	tri-yearly, semi-yearly, yearly].

	* src/gnome/gnc-frequency.c (gnc_frequency_save_state): Some